# hodea-lib-testing

./: .gitignore  .gitmodules  LICENSE  README.md  ThirdPartyNotices.md  ThirdPartyNotices.txt
posix_host/: env_clang.sh  env_gcc.sh  show_coverage.sh
posix_host/core/: CMakeLists_core.txt  Makefile  bitfield.cpp  bitmanip.cpp  bitmask.cpp  cpu_endian.cpp  hodea_user_config.hpp  htsc.cpp  main.cpp  math.cpp  scoped_enum.cpp  scoped_enum_bitmask.cpp  serialization.cpp  uswap.cpp  utils.cpp
posix_host/rte/: CMakeLists_core.txt  Makefile  hodea_user_config.hpp  htsc.cpp  htsc_timer.cpp  htsc_user_time_base.hpp  main.cpp  rte_setup.cpp
posix_host/utils/: CMakeLists_core.txt  CMakeLists_utils.txt  Makefile  bitmanip.cpp  byteorder.cpp  cpu_endian.cpp  serialization.cpp  ureverse.cpp  uswap.cpp
posix_hosted/hdp/: Makefile  ts_hdp.cpp
posix_hosted/hdp/hdp/: hdp.c  hdp.cpp  hdp.h  hdp.hpp
posix_hosted/header_only_units/: Makefile  ts_bitmanip.cpp  ts_byteorder.cpp
posix_hosted/utils/: CMakeLists_utils.txt  Makefile  bitmanip.cpp  byteorder.cpp
stm32/combined_tests/: CMakeLists_stm32f0.txt  CMakeLists_stm32f091.txt  CMakeLists_stm32f334.txt  Makefile  Makefile.cmake  cmake_stm32f0.txt  stm32f091_combined_tests.jdebug
stm32/combined_tests/MDK-ARM/: stm32f091_combined_tests.uvoptx  stm32f091_combined_tests.uvprojx
stm32/combined_tests/doc/: nucleo-f091rc.ioc  nucleo-f334r8.ioc  testboard_picture.vsdx
stm32/combined_tests/emStudio/: stm32_combined_tests.emProject
stm32/combined_tests/gcc/: CMakeLists.txt
stm32/combined_tests/src/: digio_pins.hpp  main.cpp  retarget.cpp  retarget.hpp  tfw.cpp  tfw.hpp  tfw_config.hpp
stm32/combined_tests/src/basic_functions/: critical_section.cpp  digio_test.cpp  pin_config_test.cpp  pin_config_test.hpp
stm32/combined_tests/src/stm32f091/: bsp.cpp  bsp.hpp  hodea_user_config.hpp  system_stm32f0xx.cpp
stm32/combined_tests/src/stm32f334/: bsp.cpp  bsp.hpp  hodea_user_config.hpp  system_stm32f3xx.cpp
tools/: stm32_flash_image
(+1 files in other folders)
